Improved CDI beans handling